fix spacing issues

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -9,7 +9,7 @@ header {
 
 h1 {
   font-family: "Outfit", sans-serif;
-  font-size: 5em;
+  font-size: 4em;
   font-weight: 00;
 }
 
@@ -20,7 +20,7 @@ h1 span {
 h2 {
   margin-top: 0;
   font-family: "Outfit", sans-serif;
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: 500;
 }
 
