--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -2,18 +2,13 @@ section {
   padding: 2em;
   background-color: #15372b;
   color: #fff;
-}
-
-h3 {
-  font-family: "Outfit", sans-serif;
-  font-size: 2em;
-  text-align: center;
+  margin-top: 5em;
 }
 
 ul {
   margin: auto;
+  padding: 0;
   min-height: 30vh;
-  width: 80%;
   text-align: center;
   display: grid;
   grid-template-columns: 50% 50%;
